class notes, answered questions for 02

--- a/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
+++ b/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
@@ -363,8 +363,8 @@
       "metadata": {},
       "source": [
         "##### ✅ Answer:\n",
-        "1.\n",
-        "2."
+        "1. Yes. Through the dimensions parameter in the embedding API\n",
+        "2. It uses an MRL training technique."
       ]
     },
     {
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "id": "O4KoLbVDR6yv"
       },
@@ -431,7 +431,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### ✅ Answer:\n"
+        "##### ✅ Answer: It will allow for us to not wait for each embedding to finish, meaning we can embed multiple at the same time to optimize speed.\n"
       ]
     },
     {
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -486,14 +486,14 @@
           "data": {
             "text/plain": [
               "[('ordingly.\\nSeventh, when hiring the executive to run your former specialty, be\\ncareful you don’t hire someone weak on purpose.\\nThis sounds silly, but you wouldn’t believe how oaen it happens.\\nThe CEO who used to be a product manager who has a weak\\nproduct management executive. The CEO who used to be in\\nsales who has a weak sales executive. The CEO who used to be\\nin marketing who has a weak marketing executive.\\nI call this the “Michael Eisner Memorial Weak Executive Problem” — aaer the CEO of Disney who had previously been a brilliant TV network executive. When he bought ABC at Disney, it\\npromptly fell to fourth place. His response? “If I had an extra\\ntwo days a week, I could turn around ABC myself.” Well, guess\\nwhat, he didn’t have an extra two days a week.\\nA CEO — or a startup founder — oaen has a hard time letting\\ngo of the function that brought him to the party. The result: you\\nhire someone weak into the executive role for that function so\\nthat you can continue to be “the man” — cons',\n",
-              "  np.float64(0.6538834163849806)),\n",
+              "  np.float64(0.6538563767462544)),\n",
               " ('m. They have areas where they are truly deXcient in judgment or skill set. That’s just life. Almost nobody is brilliant\\nat everything. When hiring and when Hring executives, you\\nmust therefore focus on strength rather than lack of weakness. Everybody has severe weaknesses even if you can’t see\\nthem yet. When managing, it’s oaen useful to micromanage and\\nto provide remedial training around these weaknesses. Doing so\\nmay make the diWerence between an executive succeeding or\\nfailing.\\nFor example, you might have a brilliant engineering executive\\nwho generates excellent team loyalty, has terriXc product judgment and makes the trains run on time. This same executive\\nmay be very poor at relating to the other functions in the company. She may generate far more than her share of cross-functional conYicts, cut herself oW from critical information, and\\nsigniXcantly impede your ability to sell and market eWectively.\\nYour alternatives are:\\n(a) Macro-manage and give her an annual or quarterly object',\n",
-              "  np.float64(0.5036010199802087)),\n",
+              "  np.float64(0.5036012174947991)),\n",
               " ('ed?\\nIn reality — as opposed to Marc’s warped view of reality — it will\\nbe extremely helpful for Marc [if he were actually the CEO,\\nwhich he is not] to meet with the new head of engineering daily\\nwhen she comes on board and review all of her thinking and\\ndecisions. This level of micromanagement will accelerate her\\ntraining and improve her long-term eWectiveness. It will make\\nher seem smarter to the rest of the organization which will build\\ncredibility and conXdence while she comes up to speed. Micromanaging new executives is generally a good idea for a limited\\nperiod of time.\\nHowever, that is not the only time that it makes sense to micro66 The Pmarca Blog Archives\\nmanage executives. It turns out that just about every executive\\nin the world has a few things that are seriously wrong with\\nthem. They have areas where they are truly deXcient in judgment or skill set. That’s just life. Almost nobody is brilliant\\nat everything. When hiring and when Hring executives, you\\nmust therefore focus o',\n",
-              "  np.float64(0.4814673930878744))]"
+              "  np.float64(0.4814102594977527))]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -699,7 +699,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### ✅ Answer:\n"
+        "##### ✅ Answer: Changing the parameters can create more reproducible outputs, like the seed parameter or changing the temperature.\n"
       ]
     },
     {
@@ -715,7 +715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {
         "id": "WIfpIot7R6yw"
       },
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -762,25 +762,25 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Hello! The best way to write a loop in Python depends on what you want to achieve, but generally, Python’s `for` loop is very elegant and readable, especially when iterating over sequences like lists, tuples, or ranges.\n",
+            "Hello! The best way to write a loop in Python often depends on what you want to achieve, but generally, a `for` loop is the most Pythonic and readable when you are iterating over a sequence or range.\n",
             "\n",
-            "Here’s a simple example of a `for` loop that prints numbers from 0 to 4:\n",
+            "Here’s an example of a simple `for` loop that prints numbers from 1 to 5:\n",
             "\n",
             "```python\n",
-            "for i in range(5):\n",
+            "for i in range(1, 6):\n",
             "    print(i)\n",
             "```\n",
             "\n",
-            "If you need a loop that runs until some condition is met, a `while` loop is more appropriate:\n",
+            "If you want to repeat something while a condition is true, a `while` loop can be more appropriate:\n",
             "\n",
             "```python\n",
-            "count = 0\n",
-            "while count < 5:\n",
+            "count = 1\n",
+            "while count <= 5:\n",
             "    print(count)\n",
             "    count += 1\n",
             "```\n",
             "\n",
-            "If you have something specific in mind or want advice on a particular type of loop, feel free to share more details! I’m here to help. 😊\n"
+            "If you have a specific use case in mind, feel free to share it — I’d be happy to help you write the best loop for that!\n"
           ]
         }
       ],
@@ -803,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {
         "id": "D1hamzGaR6yy"
       },
@@ -857,7 +857,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -911,14 +911,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Response: The \"Michael Eisner Memorial Weak Executive Problem\" refers to a situation where a CEO who previously excelled in a specific function or specialty ends up hiring a weak executive to run that same function after becoming CEO. This problem arises because the CEO has difficulty letting go of the function that originally established their success, and as a result, deliberately or inadvertently hires someone weak in that role so that the CEO can continue to be \"the man\" in that area. An example given is Michael Eisner, the CEO of Disney, who had been a brilliant TV network executive but when he bought ABC, the network fell to fourth place. Eisner's response was that if he had more time, he could have turned ABC around himself, illustrating his reluctance to fully relinquish control to a strong executive. This problem highlights the risk of undermining the function's leadership due to the CEO's grip on the area that made them successful ([Source 1]).\n",
+            "Response: The \"Michael Eisner Memorial Weak Executive Problem\" refers to the tendency of CEOs (or startup founders) to hire weak executives in the function or specialty that originally brought the CEO to their leadership role. For example, a CEO who used to be a product manager might hire a weak product management executive, or a CEO who was formerly in sales might hire a weak sales executive. This occurs because the CEO has a hard time letting go of the function that \"brought him to the party\" and wants to continue being the primary authority or \"the man\" in that area. The term is named after Michael Eisner, the CEO of Disney, who had previously been a brilliant TV network executive. When he acquired ABC at Disney, the network fell to fourth place, but Eisner believed that if he had extra time, he could turn ABC around himself — a situation highlighting the problem of not delegating effectively to a strong executive in the CEO's former specialty (Source 1).\n",
             "\n",
             "Context Count: 3\n",
             "Similarity Scores: ['Source 1: 0.658', 'Source 2: 0.509', 'Source 3: 0.479']\n"
@@ -965,7 +965,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### ✅ Answer:\n"
+        "##### ✅ Answer: Tell the LLM to do chain of thought which makes it give a step by step on the processes its running.\n"
       ]
     },
     {
@@ -1022,7 +1022,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.9"
+      "version": "3.13.5"
     },
     "orig_nbformat": 4
   },
