added youtube input feature

--- a/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
+++ b/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
@@ -999,7 +999,236 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "### YOUR CODE HERE"
+        "# YouTube Integration for RAG Pipeline\n",
+        "# This demonstrates how to ingest YouTube videos into the RAG system\n",
+        "\n",
+        "from aimakerspace.text_utils import YouTubeLoader\n",
+        "\n",
+        "# Example YouTube video (replace with any YouTube URL)\n",
+        "youtube_url = \"https://www.youtube.com/watch?v=dQw4w9WgXcQ\"  # Rick Astley - Never Gonna Give You Up\n",
+        "\n",
+        "print(\"🎥 Loading YouTube video...\")\n",
+        "print(f\"URL: {youtube_url}\")\n",
+        "\n",
+        "# Load YouTube video transcript and metadata\n",
+        "youtube_loader = YouTubeLoader(youtube_url, include_metadata=True)\n",
+        "youtube_documents = youtube_loader.load_documents()\n",
+        "\n",
+        "print(f\"✅ Successfully loaded {len(youtube_documents)} document(s) from YouTube\")\n",
+        "print(f\"📊 Video metadata: {youtube_loader.get_metadata()}\")\n",
+        "\n",
+        "# Split the YouTube content into chunks\n",
+        "youtube_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+        "youtube_chunks = youtube_splitter.split_texts(youtube_documents)\n",
+        "\n",
+        "print(f\"📝 Split into {len(youtube_chunks)} chunks\")\n",
+        "\n",
+        "# Create a new vector database for YouTube content\n",
+        "print(\"🔍 Building vector database for YouTube content...\")\n",
+        "youtube_vector_db = VectorDatabase()\n",
+        "youtube_vector_db = asyncio.run(youtube_vector_db.abuild_from_list(youtube_chunks))\n",
+        "\n",
+        "print(\"✅ YouTube vector database created!\")\n",
+        "\n",
+        "# Test the YouTube RAG pipeline\n",
+        "print(\"\\n🤖 Testing YouTube RAG Pipeline...\")\n",
+        "youtube_rag_pipeline = RetrievalAugmentedQAPipeline(\n",
+        "    vector_db_retriever=youtube_vector_db,\n",
+        "    llm=chat_openai,\n",
+        "    response_style=\"detailed\",\n",
+        "    include_scores=True\n",
+        ")\n",
+        "\n",
+        "# Test query about the YouTube content\n",
+        "test_query = \"What is this video about?\"\n",
+        "print(f\"❓ Query: {test_query}\")\n",
+        "\n",
+        "youtube_result = youtube_rag_pipeline.run_pipeline(\n",
+        "    test_query,\n",
+        "    k=3,\n",
+        "    response_length=\"comprehensive\"\n",
+        ")\n",
+        "\n",
+        "print(f\"\\n🤖 Response: {youtube_result['response']}\")\n",
+        "print(f\"📊 Context Count: {youtube_result['context_count']}\")\n",
+        "print(f\"🎯 Similarity Scores: {youtube_result['similarity_scores']}\")\n",
+        "\n",
+        "# Demonstrate combining multiple sources (text file + YouTube)\n",
+        "print(\"\\n🔄 Creating combined RAG pipeline with both text and YouTube content...\")\n",
+        "\n",
+        "# Combine the original text chunks with YouTube chunks\n",
+        "combined_chunks = split_documents + youtube_chunks\n",
+        "print(f\"📚 Total combined chunks: {len(combined_chunks)}\")\n",
+        "\n",
+        "# Create combined vector database\n",
+        "combined_vector_db = VectorDatabase()\n",
+        "combined_vector_db = asyncio.run(combined_vector_db.abuild_from_list(combined_chunks))\n",
+        "\n",
+        "# Create combined RAG pipeline\n",
+        "combined_rag_pipeline = RetrievalAugmentedQAPipeline(\n",
+        "    vector_db_retriever=combined_vector_db,\n",
+        "    llm=chat_openai,\n",
+        "    response_style=\"detailed\",\n",
+        "    include_scores=True\n",
+        ")\n",
+        "\n",
+        "# Test query that could match either source\n",
+        "combined_query = \"What are some interesting topics discussed?\"\n",
+        "print(f\"❓ Combined Query: {combined_query}\")\n",
+        "\n",
+        "combined_result = combined_rag_pipeline.run_pipeline(\n",
+        "    combined_query,\n",
+        "    k=5,\n",
+        "    response_length=\"comprehensive\"\n",
+        ")\n",
+        "\n",
+        "print(f\"\\n🤖 Combined Response: {combined_result['response']}\")\n",
+        "print(f\"📊 Context Count: {combined_result['context_count']}\")\n",
+        "print(f\"🎯 Similarity Scores: {combined_result['similarity_scores']}\")\n",
+        "\n",
+        "print(\"\\n🎉 YouTube integration complete! The RAG system can now process both text files and YouTube videos.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# More Practical Example: Educational YouTube Video\n",
+        "# Let's try with a real educational video that has transcripts\n",
+        "\n",
+        "# Example with a TED talk or educational content\n",
+        "educational_url = \"https://www.youtube.com/watch?v=aircAruvnKk\"  # 3Blue1Brown Neural Networks\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*60)\n",
+        "print(\"🎓 EDUCATIONAL VIDEO EXAMPLE\")\n",
+        "print(\"=\"*60)\n",
+        "\n",
+        "try:\n",
+        "    print(f\"🎥 Loading educational video...\")\n",
+        "    print(f\"URL: {educational_url}\")\n",
+        "    \n",
+        "    # Load the educational video\n",
+        "    edu_loader = YouTubeLoader(educational_url, include_metadata=True)\n",
+        "    edu_documents = edu_loader.load_documents()\n",
+        "    \n",
+        "    print(f\"✅ Successfully loaded educational content!\")\n",
+        "    print(f\"📊 Video metadata: {edu_loader.get_metadata()}\")\n",
+        "    \n",
+        "    # Show a preview of the content\n",
+        "    print(f\"\\n📝 Content preview (first 200 chars):\")\n",
+        "    print(f\"'{edu_documents[0][:200]}...'\")\n",
+        "    \n",
+        "    # Split and create vector database\n",
+        "    edu_chunks = youtube_splitter.split_texts(edu_documents)\n",
+        "    print(f\"📝 Split into {len(edu_chunks)} chunks\")\n",
+        "    \n",
+        "    edu_vector_db = VectorDatabase()\n",
+        "    edu_vector_db = asyncio.run(edu_vector_db.abuild_from_list(edu_chunks))\n",
+        "    \n",
+        "    # Test with educational queries\n",
+        "    edu_queries = [\n",
+        "        \"What is this video about?\",\n",
+        "        \"What are the main concepts discussed?\",\n",
+        "        \"What examples are given?\",\n",
+        "        \"What is the conclusion?\"\n",
+        "    ]\n",
+        "    \n",
+        "    edu_rag = RetrievalAugmentedQAPipeline(\n",
+        "        vector_db_retriever=edu_vector_db,\n",
+        "        llm=chat_openai,\n",
+        "        response_style=\"detailed\",\n",
+        "        include_scores=True\n",
+        "    )\n",
+        "    \n",
+        "    for i, query in enumerate(edu_queries, 1):\n",
+        "        print(f\"\\n❓ Query {i}: {query}\")\n",
+        "        result = edu_rag.run_pipeline(query, k=2)\n",
+        "        print(f\"🤖 Answer: {result['response'][:200]}...\")\n",
+        "        print(f\"🎯 Top similarity score: {result['similarity_scores'][0] if result['similarity_scores'] else 'N/A'}\")\n",
+        "        \n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Error loading educational video: {e}\")\n",
+        "    print(\"💡 This might be due to transcript availability or network issues.\")\n",
+        "    print(\"🔄 Try with a different video URL that has transcripts available.\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Utility Function for Easy YouTube Integration\n",
+        "def create_youtube_rag_pipeline(youtube_url: str, chunk_size: int = 1000, chunk_overlap: int = 200):\n",
+        "    \"\"\"\n",
+        "    Create a complete RAG pipeline from a YouTube URL.\n",
+        "    \n",
+        "    Args:\n",
+        "        youtube_url: YouTube video URL\n",
+        "        chunk_size: Size of text chunks for splitting\n",
+        "        chunk_overlap: Overlap between chunks\n",
+        "        \n",
+        "    Returns:\n",
+        "        tuple: (vector_db, rag_pipeline, metadata)\n",
+        "    \"\"\"\n",
+        "    print(f\"🎥 Creating RAG pipeline for: {youtube_url}\")\n",
+        "    \n",
+        "    # Load YouTube content\n",
+        "    loader = YouTubeLoader(youtube_url, include_metadata=True)\n",
+        "    documents = loader.load_documents()\n",
+        "    metadata = loader.get_metadata()\n",
+        "    \n",
+        "    # Split into chunks\n",
+        "    splitter = CharacterTextSplitter(chunk_size=chunk_size, chunk_overlap=chunk_overlap)\n",
+        "    chunks = splitter.split_texts(documents)\n",
+        "    \n",
+        "    # Create vector database\n",
+        "    vector_db = VectorDatabase()\n",
+        "    vector_db = asyncio.run(vector_db.abuild_from_list(chunks))\n",
+        "    \n",
+        "    # Create RAG pipeline\n",
+        "    rag_pipeline = RetrievalAugmentedQAPipeline(\n",
+        "        vector_db_retriever=vector_db,\n",
+        "        llm=chat_openai,\n",
+        "        response_style=\"detailed\",\n",
+        "        include_scores=True\n",
+        "    )\n",
+        "    \n",
+        "    print(f\"✅ Created pipeline with {len(chunks)} chunks\")\n",
+        "    print(f\"📊 Video: {metadata.get('title', 'Unknown')} by {metadata.get('author_name', 'Unknown')}\")\n",
+        "    \n",
+        "    return vector_db, rag_pipeline, metadata\n",
+        "\n",
+        "# Example usage of the utility function\n",
+        "print(\"\\n\" + \"=\"*60)\n",
+        "print(\"🛠️  UTILITY FUNCTION DEMO\")\n",
+        "print(\"=\"*60)\n",
+        "\n",
+        "# You can easily create RAG pipelines for any YouTube video\n",
+        "example_urls = [\n",
+        "    \"https://www.youtube.com/watch?v=dQw4w9WgXcQ\",  # Rick Astley\n",
+        "    # Add more URLs here to test\n",
+        "]\n",
+        "\n",
+        "for url in example_urls:\n",
+        "    try:\n",
+        "        print(f\"\\n🔗 Processing: {url}\")\n",
+        "        vector_db, rag_pipeline, metadata = create_youtube_rag_pipeline(url)\n",
+        "        \n",
+        "        # Test with a simple query\n",
+        "        test_query = \"What is this video about?\"\n",
+        "        result = rag_pipeline.run_pipeline(test_query, k=2)\n",
+        "        \n",
+        "        print(f\"❓ Query: {test_query}\")\n",
+        "        print(f\"🤖 Answer: {result['response'][:150]}...\")\n",
+        "        \n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Error processing {url}: {e}\")\n",
+        "\n",
+        "print(\"\\n🎉 YouTube RAG integration is now complete and ready to use!\")\n",
+        "print(\"💡 You can now easily ingest any YouTube video with transcripts into your RAG system.\")\n"
       ]
     }
   ],
